# Mai_3sem_os

./: README.md
os_KP/: Makefile  README.md  words.txt
os_KP/include/: game_logic.h  shared.h
os_KP/report/: client_strace.txt  server_strace.txt
os_KP/report/inc/: title.tex
os_KP/report/src/: code.tex  conclusion.tex  condition.tex  description.tex  method.tex  results.tex  strace.tex
os_KP/src/: client.c  game_logic.c  server.c
os_lab1/: CMakeLists.txt  child.c
os_lab1/inc/: title.tex
os_lab1/new/: child.c  parent.c
os_lab1/src/: code.tex  conclusion.tex  description.tex  method.tex  results.tex  strace.tex
os_lab1/src/code/: parent.c
os_lab1/src/sections/: code.tex  conclusion.tex  condition.tex  description.tex  method.tex  strace.tex
os_lab1/styles/: packages.tex
os_lab2/: find_min_max.c  find_min_max.h  main.c  report.tex
os_lab2/inc/: title.tex
os_lab2/src/: README.md  code.tex  conclusion.tex  condition.tex  description.tex  method.tex  results.tex  strace.tex
os_lab2/src/sections/: code.tex  condition.tex  description.tex  method.tex  results.tex  strace.tex
os_lab3/: Makefile  README.md  child.c  common.h  parent.c
os_lab3/inc/: title.tex
os_lab3/src/: code.tex  conclusion.tex  condition.tex  description.tex  method.tex  results.tex  strace.tex
os_lab4/lab/: CMakeLists.txt  README.md
os_lab4/lab/include/: functions.h
os_lab4/lab/report/: Makefile  report.tex  strace_source.txt
os_lab4/lab/report/inc/: title.tex
os_lab4/lab/report/src/: code.tex  conclusion.tex  condition.tex  description.tex  main.tex  method.tex  results.tex  strace.tex
os_lab4/lab/report/styles/: settings.tex
os_lab4/lab/src/impl1/: CMakeLists.txt  sin_integral.c  translation.c
os_lab4/lab/src/impl2/: CMakeLists.txt  sin_integral.c  translation.c
os_lab4/lab/src/program1/: CMakeLists.txt  main.c
os_lab4/lab/src/program2/: CMakeLists.txt  main.c
os_lab4/lab/tests/: test_functions.c  test_impl2.c
os_lab5/: strace1.txt
os_lab5/report/: program1_strace.txt  program2_strace.txt  report.tex  strace2.txt  strace3.txt
os_lab5/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
os_lab5/report/styles/: log-style.sty
